<resources>
    <string name="app_name">Meow</string>

    <!-- Activities, fragments and menu titles -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_catalogs">Catalogs</string>
    <string name="title_library">Library</string>
    <string name="title_about">About</string>
    <string name="title_history">History</string>
    <string name="title_palette">Palette</string>
    <string name="title_settings">Settings</string>
    <string name="title_reader_settings">Settings</string>
    <string name="title_subscribe">Subscribe</string>
    <string name="title_download">Download</string>

    <!-- About -->
    <string name="about_update">Check update</string>
    <string name="about_update_summary">Click to check update</string>
    <string name="about_resource">Source code</string>
    <string name="about_resource_url">https://github.com/ReChinX/Meow</string>

    <!-- Misc -->
    <string name="no_more_results">No more rersults</string>
    <string name="add_tag">Add tag</string>
    <string name="specific_search_hint">Enter text to search content</string>
    <string name="search_result_title">Result-%s</string>

    <!-- Manga info -->
    <string name="manga_info_author">Author</string>
    <string name="manga_info_date_updated">Date updated</string>
    <string name="manga_info_date_loading">Loading</string>
    <string name="manga_info_status">Status</string>
    <string name="manga_description">Description</string>
    <string name="manga_info_chapters">Chapters</string>
    <string name="string_manga_status_ongoing">Ongoing</string>
    <string name="string_manga_status_completed">Completed</string>
    <string name="string_manga_status_unknown">Unknown</string>
    <string name="string_error">Whoops! Something went wrong</string>
    <string name="string_button_retry">Retry</string>
    <string name="string_empty">No Results Found</string>

    <!-- Custom filters -->
    <string name="string_custom_filter">Custom Filter</string>
    <string name="action_close">Close</string>
    <string name="action_reset">Reset</string>
    <string name="action_search">Search</string>

    <!-- Reader Settings -->
    <string name="setting_sheet_select_viewer">Selecting viewer </string>
    <string name="setting_sheet_category_general">General</string>
    <string name="setting_sheet_hide_info">Hide reader information</string>
    <string name="setting_sheet_category_page">Pager</string>
    <string name="setting_sheet_category_webtoon">Webtoon</string>
    <string name="setting_sheet_fullscreen">Fullscreen</string>
    <string name="pref_page_transitions">Page transitions</string>
    <string name="default_viewer">Default</string>
    <string name="left_to_right_viewer">Left to right</string>
    <string name="right_to_left_viewer">Right to left</string>
    <string name="webtoon_viewer">Webtoon</string>
    <string name="action_retry">Retrt</string>
    <string name="transition_finished">Finished:</string>
    <string name="transition_current">Current:</string>
    <string name="transition_next">Next:</string>
    <string name="transition_previous">Previous:</string>
    <string name="transition_no_next">There\'s no next chapter</string>
    <string name="transition_no_previous">There\'s no previous chapter</string>
    <string name="transition_pages_loading">Loading pages…</string>
    <string name="transition_pages_error">Failed to load pages: %1$s</string>

</resources>
