<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="top.rechinx.meow.ui.about.AboutFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="0dp"
        android:theme="?actionBarTheme" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="?attr/colorPrimary">
        <TextView
            style="@style/TextAppearance.App.Body1.Light"
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/app_name"
            android:textSize="54sp"/>
        <TextView
            style="@style/TextAppearance.App.Body1.Light"
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/update"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            style="@style/TextAppearance.App.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/about_update"/>

        <TextView
            style="@style/TextAppearance.App.Body1.Secondary"
            android:id="@+id/update_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:textSize="14sp"
            android:text="@string/about_update_summary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/resource"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">
        <TextView
            style="@style/TextAppearance.App.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/about_resource"/>
        <TextView
            style="@style/TextAppearance.App.Body1.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:textSize="14sp"
            android:text="@string/about_resource_url"/>
    </LinearLayout>

</LinearLayout>
